[package]
name = "benetnasch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version="1.28.2",features = ["full"]}

[dependencies]
libflate = "1.0.3"
chrono = "0.4.19"
notify = "5.0.0"
slog = {version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"]}
slog-atomic = "3.1.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.9.0"
lazy_static = "1.4.0"
viperus = "0.1.10"
term = "0.7.0"
atty = "0.2"
futures-util = {version = "0.3.26", optional = true}
futures = {version = "0.3.26", optional = true}
tokio = {version="1.28.2",features = ["full"], optional = true}
tokio-udev ={version="0.8.0", optional = true}

[features]
defaults = []
asyncshell = ["dep:tokio"]
asyncudev = ["dep:tokio-udev", "dep:tokio", "dep:futures", "futures-util"]

[profile.release]
lto = true
strip = true
